Fixed spacing in Resource content areas. Spreadsheet #23.

--- a/src/resources/postcss/help-hub.pcss
+++ b/src/resources/postcss/help-hub.pcss
@@ -237,19 +237,20 @@ ul.tec-help-list__list-expanded {
 	.tribe_events_page_tec-events-settings .tec-settings-form .tec-settings-form__header-block {
 		padding-right: var(--tec-spacer-7);
 	}
+
+	.tribe_events_page_tec-events-settings .tec-settings-form > .tec-settings-form__content-section {
+		column-gap: 40px;
+	}
 }
 
 @media (--viewport-xlarge) {
 	.tribe_events_page_tec-events-settings #tec-settings-form .tec-settings-form__header-block, .tribe_events_page_tec-events-settings .tec-settings-form .tec-settings-form__header-block {
-		margin: var(--tec-spacer-0) var(--tec-spacer-1);
+		padding: var(--tec-spacer-0) var(--tec-spacer-1);
+		margin: 0;
 	}
 
 	.tribe_events_page_tec-events-settings #tec-settings-form .tec-settings-form__header-block, .tribe_events_page_tec-events-settings .tec-settings-form .tec-settings-form__header-block--horizontal {
 		margin: initial;
-	}
-
-	.tribe_events_page_tec-events-settings .tec-settings-form .tec-settings-form__content-section .tec-settings-form__header-block {
-		padding-right: 0;
 	}
 
 	.tribe_events_page_tec-events-settings .tec-settings-form .tec-settings-infobox {
